# PetalPages

./: .env.example  .gitignore  PLAN.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/constants/: alphabetChallenge.ts  anxiety.ts  appSettings.ts  bookTracker.ts  bookTris.ts  calendar.ts  crying.ts  dayReview.ts  disclaimer.ts  dream.ts  fitness.ts  goals.ts  movies.ts  navTheme.ts  pageBackgrounds.ts  pageTextColors.ts  rainbowBooks.ts  ratings.ts  reading.ts  shows.ts  sleep.ts  stress.ts  tbr.ts  tbrBookshelf.ts  trackerScale.ts
src/context/: AuthContext.tsx  PageBackgroundContext.tsx
src/lib/: firebase.ts
src/pages/: AccountPage.css  AccountPage.tsx  AlphabetChallengePage.css  AlphabetChallengePage.tsx  AnxietyTrackerPage.css  AnxietyTrackerPage.tsx  BookTrackerPage.css  BookTrackerPage.tsx  BookTrisPage.css  BookTrisPage.tsx  CalendarPage.css  CalendarPage.tsx  CryingTrackerPage.css  CryingTrackerPage.tsx  DreamsPage.css  DreamsPage.tsx  FitnessTrackerPage.css  FitnessTrackerPage.tsx  GoalsPage.css  GoalsPage.tsx  MoviesPage.css  MoviesPage.tsx  RateMyDayPage.css  RateMyDayPage.tsx  ReadTheRainbowPage.css  ReadTheRainbowPage.tsx  ReadingTrackerPage.css  ReadingTrackerPage.tsx  ReviewYourDayPage.css  ReviewYourDayPage.tsx  SettingsPage.css  SettingsPage.tsx  ShowsPage.css  ShowsPage.tsx  SleepTrackerPage.css  SleepTrackerPage.tsx  StressTrackerPage.css  StressTrackerPage.tsx  TbrListPage.css  TbrListPage.tsx  (+3 more)
(+84 files in other folders)
