[package]
name = "rate-my-day"
version = "0.1.0"
description = "A personal mood logger and daily habit tracker"
authors = ["olivi"]
edition = "2021"

[lib]
name = "rate_my_day_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
